--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.16",
+    "@types/smtp-server": "^3.5.10",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
@@ -29,6 +31,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.682.0",
     "@types/mongoose": "^5.11.97",
     "argon2": "^0.41.1",
     "aws-lambda": "^1.0.7",
@@ -40,8 +43,11 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "serverless-dotenv-plugin": "^4.0.2",
+    "smtp-server": "^3.13.6",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.0.2"
   }
 }
